# opal-database

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
database/models/: user.py
database/tests/: test_database.py
opal_database/database_base/: create_superuser.py  create_tables.py  database.py  delete_user.py
opal_database/database_base/data/: opal_suite.db
opal_database/database_base/models/: user.py
opal_database/database_base/tests/: test_database.py
scripts/: cloud_gcp_deployment.sh  standalone.sh  standalone_docker.sh  webapp.sh
