
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opal_database"
version = "0.1.0"
authors = [
  { name="OpalSuite Team", email="contact@opalsuite.com" },
]
description = "Database models and utilities for OpalSuite"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlalchemy",
]

[project.urls]
"Homepage" = "https://github.com/opalsuite/opal-database"
"Bug Tracker" = "https://github.com/opalsuite/opal-database/issues"
